# FinMask

./: .coverage  .env.example  .flake8  .gitignore  README.md  flake8_report.txt  main.py  mylog.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: csv_excel_reader.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_csv_excel_reader.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils_api.py  test_widget.py
