[project]
name = "finmask"
version = "0.1.0"
description = ""
authors = [
    {name = "Jane Rudzit",email = "jrudzit@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"
isort = "^6.0.1"
types-requests = "^2.32.4.20250913"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/masks.py",
    "src/widget.py",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]  # совместимость с black, если понадобится
per-file-ignores = [
    "src/masks.py:E203,E501",
    "src/widget.py:E501",
]
